--- a/_posts/2014-07-30-yog.md
+++ b/_posts/2014-07-30-yog.md
@@ -75,7 +75,18 @@ module.exports = function (router) {
 
 ```
 
-在项目启动的时候，扫描`controllers`目录下的文件，全部挂在即可；
+在项目启动的时候，扫描`controllers`目录下的文件，全部挂载即可；
+
+通过对`中间件`的处理以及`router`的处理；入口文件就相当简单了；
+
+```
+var app = require('express')();
+var yog = require('yog');
+
+app.use(yog());
+app.listen(4000);
+
+```
 
 ### bigpipe支持
 
@@ -101,9 +112,19 @@ module.exports = function (router) {
 MVC封装比较简洁，`controller`兼职管理`router`的职务，并渲染`view`。
 
 ### 目录规范，开发模式
+最后说一下目录规范，其实这些都在[文档](http://oak.baidu.com/docs/yogurt)中有详细的说明；
 
-对于node层面的开发模式还正在研究，node的横空出世，给做前端的各位带来了很大的挑战以及机遇。而如果同一拨人负责UI逻辑以及前端的开发，可以对新需求很快响应。设计的API接口也相对比较适合页面的展现。
+```bash
+➜  yog-app git:(master) ✗ tree -L 1
+.
+├── config
+├── controllers # controller
+├── models # model
+├── views  # view
+├── public    # 静态资源文件夹
+└── server.js # 入口文件
+```
 
-假设UI，前端代码都同一个人实现，那其分工就相对于比较模糊了；如何组织开发模式才是最优的呢，这个还需要进一步的摸索。
+关于开发模式，虽然由同一个人实现前后端，但还是做了*前后分离*。
 
 [yog]: https://github.com/fex-team/yog "yog framework"
