--- a/_posts/2014-07-30-yog.md
+++ b/_posts/2014-07-30-yog.md
@@ -79,7 +79,7 @@ module.exports = function (router) {
 
 通过对`中间件`的处理以及`router`的处理；入口文件就相当简单了；
 
-```
+```javascript
 var app = require('express')();
 var yog = require('yog');
 
