--- a/_posts/2014-07-30-yog.md
+++ b/_posts/2014-07-30-yog.md
@@ -111,7 +111,7 @@ app.listen(4000);
 
 MVC封装比较简洁，`controller`兼职管理`router`的职务，并渲染`view`。
 
-### 目录规范，开发模式
+### 目录规范
 最后说一下目录规范，其实这些都在[文档](http://oak.baidu.com/docs/yogurt)中有详细的说明；
 
 ```bash
@@ -125,6 +125,40 @@ MVC封装比较简洁，`controller`兼职管理`router`的职务，并渲染`vi
 └── server.js # 入口文件
 ```
 
-关于开发模式，虽然由同一个人实现前后端，但还是做了*前后分离*。
+### 开发模式
+
+![](./img/rd-fe.png)
+
+如图，述说开发模式，不得不上一幅图；
+
+演员上场；
+
+RD 后端开发
+FE 前端开发
+
+#### A开发模式
+
+FE写完页面，然后把写好的页面交给RD进行模板化，也就是『模板』这个东西在RD手上，也就是归于『后端业务逻辑』
+
+这种模式的不好的地方是，前端页面展现显然是经常会变化的，那么来回这么折腾，费时费力不说还费钱；
+
+#### B开发模式
+
+为了解决上面的问题，出现了B开发模式，B开发模式是这样的；FE负责了写『模板』这个事情，每次迭代都很方便，有UI修改，只需要上模板就行，这时候一个频繁的工作由FE完成；
+
+当然，这种开发模式也是有问题的；比如RD没有开发完成，FE就没有数据来测试自己的代码了；这时候需要一套本地模拟环境的工具；比如现在的[fis-plus](http://oak.baidu.com/docs/fis-plus)就完美模拟了线上环境；
+
+还有一个问题是啥呢，那就是每次还需要跟RD对接口，对数据结构，每次添加修改点数据也很麻烦；
+
+到后来就出现了C开发模式
+
+#### C开发模式
+
+C开发模式就是建立『大前端』，FE负责UI层后端逻辑以及前端相关所有事物，这种模式相当不错，处理问题或者添加功能只需要FE来搞就行，没有了额外的沟通开销，开发顺畅了不少。
+
+但，也许FE需要学习一门后端语言，当然这个不是问题；
+
+[yog][yog] 专提供给FE同学的后端UI开发框架，不巧语言也是FE同学熟悉的JavaScript（nodejs），这样似乎可以方便的使用`C开发模式`。
+
 
 [yog]: https://github.com/fex-team/yog "yog framework"
