--- a/_posts/2014-07-30-yog.md
+++ b/_posts/2014-07-30-yog.md
@@ -127,7 +127,7 @@ MVC封装比较简洁，`controller`兼职管理`router`的职务，并渲染`vi
 
 ### 开发模式
 
-![](./img/rd-fe.png)
+![](/images/dev/rd-fe.png)
 
 如图，述说开发模式，不得不上一幅图；
 
