--- a/_posts/2014-07-30-yog.md
+++ b/_posts/2014-07-30-yog.md
@@ -131,10 +131,8 @@ MVC封装比较简洁，`controller`兼职管理`router`的职务，并渲染`vi
 
 如图，述说开发模式，不得不上一幅图；
 
-演员上场；
-
-RD 后端开发
-FE 前端开发
+- RD 后端开发
+- FE 前端开发
 
 #### A开发模式
 
