--- a/_posts/2014-07-30-yog.md
+++ b/_posts/2014-07-30-yog.md
@@ -75,7 +75,7 @@ module.exports = function (router) {
 
 ```
 
-在项目启动的时候，扫描`controllers`目录下的文件，全部挂载即可；
+在项目启动的时候，会扫描`controllers`目录下的文件，全部挂载到运行环境中；
 
 通过对`中间件`的处理以及`router`的处理；入口文件就相当简单了；
 
