--- a/_posts/2014-07-30-yog.md
+++ b/_posts/2014-07-30-yog.md
@@ -112,7 +112,7 @@ app.listen(4000);
 MVC封装比较简洁，`controller`兼职管理`router`的职务，并渲染`view`。
 
 ### 目录规范
-最后说一下目录规范，其实这些都在[文档](http://oak.baidu.com/docs/yogurt)中有详细的说明；
+这节说一下目录规范，其实这些都在[文档](http://oak.baidu.com/docs/yogurt)中有详细的说明；
 
 ```bash
 ➜  yog-app git:(master) ✗ tree -L 1
