--- a/_posts/2014-05-30-quickling-1.md
+++ b/_posts/2014-05-30-quickling-1.md
@@ -22,7 +22,7 @@ categories: web-dev
 
 ### bigpipe
 
-bigpipe对服务器要求比较高，需要支持chunk输出。其实就是在同一个链接上将一个页面分段输出。需要服务器端能并行处理页面，假设页面可以分为三屏，没屏都对应一些数据。当某一屏的数据获取成功，其可以马上返回给浏览器（也就是pipe的方式输出），这样对应的屏就展现出来了。如果支持并行处理，再以chunk的方式输出，无疑会让浏览器加载展现会快很多。
+bigpipe对服务器要求比较高，需要支持chunk输出。其实就是在同一个链接上将一个页面分段输出。需要服务器端能并行处理页面，假设页面可以分为三屏，每屏都对应一些数据。当某一屏的数据获取成功，其可以马上返回给浏览器（也就是pipe的方式输出），这样对应的屏就展现出来了。如果支持并行处理，再以chunk的方式输出，无疑会让浏览器加载展现会快很多。
 
 对于上面说的举个例子；假设页面分为三部分A，B，C，A的数据是调用后端服务层`api_a`得到，B是`api_b`，C是`api_c`。
 
