--- a/_posts/2015-04-24-fis3-dev-0.md
+++ b/_posts/2015-04-24-fis3-dev-0.md
@@ -5,7 +5,7 @@ date:   2015-04-24 15:50:43
 categories: web-dev
 ---
 
-2015 年之初，从彷徨中惊觉，总结了 FIS2 的成功以及操点，在忐忑中开始了 3.0 的开发筹备；
+2015 年之初，从彷徨中惊觉，总结了 FIS2 的成功及槽点，在忐忑中开始了 3.0 的开发筹备；
 
 忐忑的原因有很多种，FIS 团队在 2013 - 2014 变动比较大，几乎是换了一波人，包括总架构师也离开了团队，这是忐忑的原因之一；还有一个原因是害怕做出来的东西无法超越前者，那么必将引入新一轮的口水仗。虽然有诸多忐忑，整个过程还是在慢慢推进，还算顺风顺水，老大也比较支持。
 
