--- a/_posts/will/2015-04-24-fis3-dev-0.md
+++ b/_posts/will/2015-04-24-fis3-dev-0.md
@@ -159,4 +159,8 @@ fis.match('a.js', {
 
 ### 问题修复及其改进
 
-要不，这块在下一篇说吧
+说起问题，有几个显著的问题
+
+- 安装容易失败
+
+    依托于 NPM ，而 NPM 外国网站经常被祖国长城封闭，或者是加入一大堆的检测，导致下载速度很慢；很容易安装过程中挂掉；再加上 NPM 的包比较松散，做一键安装包也比较费劲，这个问题也不好处理。最近关注到一个项目 https://github.com/crcn/nexe 希望这个项目可以给我们一些新的灵感，来解决这个问题。
