--- a/_posts/2017-01-12-mazda-01.md
+++ b/_posts/2017-01-12-mazda-01.md
@@ -5,7 +5,7 @@ date: 2017-01-12 17:46:35 +0800
 categories: my/mazda
 ---
 
-除了写代码，书写一些生活细节，也成了乐趣。既感于生活中的点点滴滴，也欢喜未来的没一缕阳光。
+除了写代码，书写一些生活细节，也成了乐趣。既感于生活中的点点滴滴，也欢喜未来的每一缕阳光。
 
 昨天，很早就下班回家了，每天下班都是跟老婆一起回家的，今天她有事情，没能跟我一起。回到加开着『家庭影院』播放『了不起的匠人』，不知觉已是十点。老婆还未回家，有些担心，微信她几时回来。得知又去了 KTV，就商量这十点半去接她。
 
