--- a/_posts/2017-01-12-mazda-01.md
+++ b/_posts/2017-01-12-mazda-01.md
@@ -15,7 +15,7 @@ categories: my/mazda
 
 今天，早上起来，找了个修车小伙，几分钟换了备胎，将就用，后开始找轮胎。
 
-马自达 CX-4 使用的 225/55/r19 G91 的轮胎规格奇异，大家都叫它异性胎。找了几家本地的轮胎商家，都没有。求助 4S 店也说需要订购，大概几天才能过来而且价格不菲（1.2k 左右）。去淘宝找了一圈，正好有个卖原厂轮胎的 800+ 多，加上邮费工钱 1k 能全搞定。
+马自达 CX-4 使用的 225/55/r19 G91 的轮胎规格奇异，大家都叫它异性胎。找了几家本地的轮胎商家，都没有。求助 4S 店也说需要订购，大概几天才能过来而且价格不菲（1.2k 左右）。去淘宝找了一圈，正好有个卖原厂轮胎的 0.83k+，加上邮费工钱 1k 能全搞定。
 
 遂下单订购，不出意外，周六就能用上。
 
@@ -29,4 +29,4 @@ categories: my/mazda
 
 到得现在，这台车子来到我家有半年了，开着很舒服。驾驶起来非常灵活，喜欢马自达这种操控体验，期间陆续租开过别克、雪佛兰的车，方向盘很重，不是我喜欢的类型。
 
-如果可以，我希望有一天来个公路旅行，开着车来一场欢快的旅行。
+如果可以，我希望有一天来个公路旅行。开着车，一路西行，玩耍、摄影、回家。
