--- a/_posts/2018-12-08-0x01.md
+++ b/_posts/2018-12-08-0x01.md
@@ -73,7 +73,7 @@ categories: 2018/12-0x01
 
 盯着 60 多英寸的小米电视，看一部剧应该是一个还不错的选择，但，好看的剧也就那么多。
 
-最近在看《将夜》，周末确不放，有点些许遗憾。
+最近在看《将夜》，周末却不放，有点些许遗憾。
 
 跟爱人一起看了一部腾讯拍的美食类纪录片，充分吊起自己的胃口，在市场买了许多食材，做了饺子和胡辣汤。
 
